--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "axios": "^0.19.0",
-    "gatsby": "^2.13.59",
+    "axios": "^0.19.2",
+    "gatsby": "^2.20.15",
     "gatsby-image": "^2.2.8",
     "gatsby-plugin-manifest": "^2.2.5",
     "gatsby-plugin-offline": "^2.2.5",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.11",
-    "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
-    "twilio": "^3.33.3",
-    "twilio-video": "^2.0.0-beta12"
+    "twilio": "^3.42.1",
+    "twilio-video": "^2.3.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
@@ -38,9 +38,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "git+https://github.com/gatsbyjs/gatsby-starter-default.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "homepage": "https://github.com/gatsbyjs/gatsby-starter-default#readme",
+  "main": "gatsby-browser.js"
 }
