First commit. Video + text.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "twilio": "^3.42.1",
-    "twilio-video": "^2.3.0"
+    "twilio-video": "^2.3.0",
+    "twilio-chat": "^3.3.2"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
